# agent-forge

./: .env.example  .gitignore  README.md  RUN.md  main.py  pyproject.toml  requirements.txt  run.py  serve_frontend.py  start.bat  stop.bat
.skills/greeting/: impl.py  skill.yaml
backend/: __init__.py  app.py
backend/core/: __init__.py  agent.py  config.py  context.py
backend/llm/: __init__.py  base.py  claude_adapter.py  deepseek_adapter.py  factory.py  ollama_adapter.py  openai_adapter.py
backend/memory/: __init__.py  base.py  embeddings.py  hybrid_memory.py  sqlite_store.py  vector_store.py
backend/orchestrator/: __init__.py  blackboard.py  dsl.py  engine.py  models.py  parser.py
backend/server/: __init__.py  api_routes.py  serializers.py  skill_routes.py  ws_handler.py
backend/skills/: __init__.py  base.py  loader.py  manager.py  registry.py
backend/skills/builtin/: __init__.py  file_ops.py  memory_ops.py  web_search.py
examples/: research-flow.yaml  research_flow.py
gui/: index.html  package-lock.json  package.json  vite.web.config.ts
gui/electron/: main.ts  preload.ts
gui/src/: App.tsx  global.d.ts  index.css
gui/src/components/AgentManager/: AgentManagerPage.tsx
gui/src/components/Chat/: ChatPage.tsx  MessageBubble.tsx
gui/src/components/FlowCanvas/: AgentNode.tsx  FlowEditorPage.tsx
gui/src/components/Layout/: SettingsPage.tsx  Sidebar.tsx  TopBar.tsx
gui/src/components/SkillManager/: SkillEditor.tsx  (+1 more)
gui/src/services/: backend.ts
gui/src/stores/: appStore.ts
tests/: test_integration.py  test_memory.py  test_orchestrator.py
